# PomodoroTimer_2

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
